--- a/press.html
+++ b/press.html
@@ -23,6 +23,7 @@
     </header>
 
     <main class="intro">
+        <div class="projectcontainer">
         
         <h1>Press</h1>
 
@@ -35,6 +36,8 @@
         </section>
 
         </article>
+
+        </div>
 
         
 
