--- a/project.html
+++ b/project.html
@@ -22,8 +22,8 @@
     </nav>
     </header>
 
-    <main class="projectcontainer">
-        
+    <main class="intro">
+        <div class="projectcontainer">
         <h1>Project Showroom</h1>
 
         <article>
@@ -42,7 +42,7 @@
             <p class="txtcol">One of my first React Projects on a brief provided by AdTrack. This test website is about tree surgery which offers services such as pollarding, stump grinding, deadwooding etc. </p>
             <p><a href="https://edgetreesurgerysg.netlify.app/">View Project Repository (GitHub) </a></p>
         </section>
-        </article>
+</article>
 
 <article>
         <section class="projectdescription">
@@ -67,7 +67,7 @@
         
 
 
-
+</div>
 
     </main>
 
