layout size change all files

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
             <p>Studying Web Applications at an early stage caught my interest in the world of coding and developing web pages using basic HTML, CSS, and JavaScript. Enthralled by the ability to create websites, I was inspired and passionate to learn more about the web industry which led me to choose a path where I could learn more and enhance my career in web technology.</p>
             <p>As an artist, I compose and release my singles on music publishing sites like Spotify, Amazon Music, Anaghami and many more. </p>
             <p>Below is the demo of my artistic skills. </p>
-            <video width="680" height="500" controls>
+            <video controls>
                 <source src="guitarplay.mp4" type="video/mp4">
             </video>
         </section>
