alignment change margin

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     </header>
 
     <main class="intro">
-        <section>
+        <section class="projectdescription">
         <h1>Hi I am Shantanu Gupta. A Designer, artist and a Software Developer living in United Kingdom.</h1>
         <p>Interested to know more.. Click on <a href="about.html" class="fade-link">About My Journey</a></p>
         </section>
 
-        <section>
+        <section class="projectdescription">
         <div class="shantanu">
         </div>
         </section>
