Linear gradient change

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <main class="intro">
         <section class="projectdescription">
-        <h1>Hi I am Shantanu Gupta. A Designer, artist and a Software Developer living in United Kingdom.</h1>
+        <h1>Hi I am Shantanu Gupta. A Web Designer, an Artist and a Software Developer living in United Kingdom.</h1>
         <p>Interested to know more.. Click on <a href="about.html" class="fade-link">About My Journey</a></p>
         </section>
 
