--- a/project.html
+++ b/project.html
@@ -32,7 +32,7 @@
                 <p><a href="https://github.com/Shantanugupta43/Speakify-ChatBot-using-OpenAI-API/blob/main/README.md">View Documentation</a></p>
                 <p><img src="images/bot.png" alt="Chatbot using openai api pic" class="image-container"></p>
                 <p class="txtcol">Created a ChatBot using Python and OpenAI api library. This chatbot allows a user to ask different questions or have casual conversations with the bot using speech. </p>
-                <p><a href="https://edgetreesurgerysg.netlify.app/">View Project Repository (GitHub) </a></p>
+                <p><a href="https://github.com/Shantanugupta43/Speakify-ChatBot-using-OpenAI-API">View Project Repository (GitHub) </a></p>
         </section>
 
         <section class="projectdescription">
