heading alignment fix

--- a/press.html
+++ b/press.html
@@ -25,7 +25,7 @@
     <main class="intro">
         <div class="projectcontainer">
         
-        <h1>Press</h1>
+        <h1 class="projectdescription">Press</h1>
 
         <article>
         <section class="projectdescription">
