--- a/project.html
+++ b/project.html
@@ -24,7 +24,7 @@
 
     <main class="intro">
         <div class="projectcontainer">
-        <h1>Project Showroom</h1>
+        <h1 class="projectdescription">Project Showroom</h1>
 
 <article>
         <section class="projectdescription">
