--- a/press.html
+++ b/press.html
@@ -30,6 +30,7 @@
         <article>
         <section class="projectdescription">
                 <p>Research Internships for Minority Ethnic Students (RIMES)</p>
+                <p>Published on - Skem News, Edge Hill University</p>
                 <p><img src="images/rimes.png" alt="Rimes pic" class="image-container"></p>
                 <p class="txtcol">Assisted a research team in Department of Psychology which uses corpus linguistics to study newspaper attitudes towards autism and climate-change activism (in particular the activist Greta Thunburg). </p>
                 <p class="txtcol">These projects have links to the United Nations Sustainable Development Goals. My role involved developing methods for visualisation of the datasets produced in both the projects as well as using a data-driven approach to get results on the web. <a href="https://www.edgehill.ac.uk/departments/support/graduateschool/rimes/">Read More </a></p>
