--- a/project.html
+++ b/project.html
@@ -17,7 +17,7 @@
             <li><a href="about.html">About</a></li>
             <li><a href="project.html">Project Showroom</a></li>
             <li><a href="press.html">Press</a></li>
-            <li>Contact Me</li>
+            <li><a href="contact.html">Contact Me</a></li>
         </ul>
     </nav>
     </header>
