Used formspree instead netlify wont support php

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
         <article>
         <section class="projectdescription">
-            <form action="email.php" method="post">
+            <form action="https://formspree.io/f/meqwvqan" method="post">
                 <label for="name">Name:</label>
                 <p><input type="text" id="name" name="name" required></p>
               
@@ -39,7 +39,7 @@
                 <label for="message">Message:</label>
                 <p><textarea id="message" name="message" required></textarea></p>
               
-                <p><input type="submit" value="Send"></p>
+                <p><input type="submit" value="Send" class="submitted"></p>
               </form>
         </section>
 
