--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-    <img src="images/logo.png" alt ="logo" class="logo">
+    <a href="index.html"><img src="images/logo.png" alt ="logo" class="logo"></a>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
