--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-    <a href="index.html"><img src="images/logo.png" alt ="logo" class="logo"></a>
+    <img src="images/logo.png" alt ="logo" class="logo">
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
