Added Github linkedin

--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,15 @@
         <div class="projectcontainer">
         
         <h1 class="projectdescription">Want to collaborate? Let's Connect.</h1>
+        <article>
+            <section class="projectdescription">
+
+            <p>GitHub - <a href="https://github.com/Shantanugupta43"> Shantanugupta43 </a></p>   
+            <p>LinkedIn - <a href="https://www.linkedin.com/in/shantanugupta43/"> Shantanugupta43 </a></p>
+            <p> Fill the form below and I would get back to you</p>
+
+            </section>
+        </article>
 
         <article>
         <section class="projectdescription">
@@ -51,6 +60,8 @@
         </section>
 
         </article>
+
+    
 
         </div>
 
