Background and click audio added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="fade.js"></script>
 </head>
 <body>
+    <audio src="sound.mp3" autoplay loop></audio>
     <header>
     <img src="images/logo.png" alt ="logo" class="logo">
     <nav>
