Added heading about project section

--- a/project.html
+++ b/project.html
@@ -42,6 +42,14 @@
         <div class="projectcontainer">
         <h1 class="projectdescription">Project Showroom</h1>
 
+        
+<article>
+    <section class="projectdescription">
+        <h2>Check out some of my projects below. To see more projects, please visit my <a href="https://github.com/Shantanugupta43">GitHub</a>.</h2>
+        </section>
+        </article>
+        
+
 <article>
         <section class="projectdescription">
                 <p>Speakify Chatbot Using OpenAI api</p>
