Added UX wireframe Edge Tree Surgery

--- a/project.html
+++ b/project.html
@@ -65,6 +65,7 @@
             <p><img src="images/edgetree.png" alt="Edge Tree Website pic" class="image-container"></p>
             <p class="txtcol">One of my first React Projects on a brief provided by AdTrack. This test website is about tree surgery which offers services such as pollarding, stump grinding, deadwooding etc. </p>
             <p><a href="https://edgetreesurgerysg.netlify.app/">View Project Repository (GitHub) </a></p>
+            <p><a href="https://www.figma.com/file/Ob1pkI2l9nRU5qTHITCbBo/Edge-Tree-Surgery?node-id=0%3A1&t=pkVqWHkb5fHQlC7W-1">View UX Designs and Wireframes (Figma) </a></p>
         </section>
 </article>
 <article>
