Changed the <A> link content

--- a/project.html
+++ b/project.html
@@ -76,7 +76,7 @@
             <p class="txtcol">One of the test doughnuts website created using standard HTML, CSS and JavaScript. </p>
             <p class="txtcol">A brief was provided by adTrack which stated the requirements of the doughnuts website. The requirements were taken into consideration and site was built. </p>
             <p><a href="https://github.com/Shantanugupta43/Doughnuts-Brief">View Project Repository (GitHub) </a></p>
-            <p><a href="https://www.figma.com/file/8WjoepPrJYCM8ABfceiYhK/Doughnuts?type=design&t=oA0hHKFYENXjH0PP-0">View UX Designs and Wireframes (Figma) </a></p>
+            <p><a href="https://www.figma.com/file/8WjoepPrJYCM8ABfceiYhK/Doughnuts?type=design&t=oA0hHKFYENXjH0PP-0">View UX Designs (Figma) </a></p>
         </section>
 
 
